5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1838_1274.log
== TEST (2019-06-20 07:52:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 0
for i in range(z):
	for j in range(z):
		if (i == j):
			z[i,j] = i + 1
		elif(i > j):
			z[i,j] = i + 1
for j in range(z):
	for i in range(z):
		if(j > i):
			z[i,j] = j + 1
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 07:53:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 0
for i in range(size(z)):
	for j in range(size(z)):
		if (i == j):
			z[i,j] = i + 1
		elif(i > j):
			z[i,j] = i + 1
for j in range(size(z)):
	for i in range(size(z)):
		if(j > i):
			z[i,j] = j + 1
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 13:51:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 1
for i in range(size(z)):
	for j in range(size(z)):
		if (i == j):
			z[i,j] = c 
		elif(i > j):
			z[i,j] =  + 1
for j in range(size(z)):
	for i in range(size(z)):
		if(j > i):
			z[i,j] = j + 1
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 13:55:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 1
for i in range(size(z)):
	for j in range(size(z)):
		if (i == j):
			z[i,j] = i + 1 
		elif(i > j):
			z[i,j] = z[i,j]
for j in range(size(z)):
	for i in range(size(z)):
		if(j > i):
			z[i,j] = j + 1
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 13:55:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 1
for i in range(size(z)):
	for j in range(size(z)):
		if (i == j):
			z[i,j] = i + 1 
		elif(i > j):
			z[i,j] = i + 1
for j in range(size(z)):
	for i in range(size(z)):
		if(j > i):
			z[i,j] = j + 1
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 13:57:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 0
for i in range(size(z)):
	for j in range(size(z)):
		if (i == j):
			c = i
			z[i,j] = c + 1 
		elif(i > j):
			c = i
			z[i,j] = c + 1
for j in range(size(z)):
	for i in range(size(z)):
		if(j > i):
			z[i,j] = j + 1
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:11:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 0
for i in range(size(z)):
	for j in range(size(z)):
		if (i == j):
			shape(z[i,:]) = c + 1
print(z)

			
-- ERROR:
File "XXXX", line 10
    shape(z[i,:]) = c + 1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:33:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 1
for i in range(size(z)):
	for j in range(size(z)):
		if (i == j):
			z[i,j] = c 
		elif (i < j):
			z[i,j] = c
	c = c + 1
	
			
			
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:33:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 1
for i in range(size(z)):
	for j in range(size(z)):
		if (i == j):
			z[i,j] = c 
		elif (i < j):
			z[i,j] = c
	c = c + 1
print(z)	
			
			
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:35:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 1
for i in range(size(z)):
	for j in range(size(z)):
		if (i < j):
			z[i,j] = c
	c = c + 1
print(z)	
			
			
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:35:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("N: ")))
#matriz
z = zeros((N,N), dtype=int)
c = 1
for i in range(size(z)):
	for j in range(size(z)):
		if (i < j):
			z[i,j] = 8
	c = c + 1
print(z)	
			
			
print(z)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:40:11) 
-- CODE:
from numpy import*
N = int(input("Matriz: "))
#matriz de zeros
z = zeros((N,N), dtype=int)
c = 1 
for i in range(N):
	for j in range(N):
		if (i < j):
			z[i,j] = c
		elif(i == j):
			z[i,j] = c
	c = c + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:40:18) 
-- CODE:
from numpy import*
N = int(input("Matriz: "))
#matriz de zeros
z = zeros((N,N), dtype=int)
c = 1 
for i in range(N):
	for j in range(N):
		if (i < j):
			z[i,j] = c
		elif(i == j):
			z[i,j] = c
	c = c + 1
print(z)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:40:31) 
-- CODE:
from numpy import*
N = int(input("Matriz: "))
#matriz de zeros
z = zeros((N,N), dtype=int)
c = 1 
for i in range(N):
	for j in range(N):
		if (i < j):
			z[i,j] = c
		elif(i == j):
			z[i,j] = c
	c = c + 1
print(z)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:43:26) 
-- CODE:
from numpy import*
N = int(input("Matriz: "))
#matriz de zeros
z = zeros((N,N), dtype=int)
c = 1 
for i in range(N):
	for j in range(N):
		if (i < j):
			z[i,j] = c
		elif(i == j):
			z[i,j] = c
	c = c + 1
c = 1
for j in range(N):
	for i in range(N):
		if (j < i):
			z[i,j] = c
	c = c + 1		
print(z)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:43:33) 
-- CODE:
from numpy import*
N = int(input("Matriz: "))
#matriz de zeros
z = zeros((N,N), dtype=int)
c = 1 
for i in range(N):
	for j in range(N):
		if (i < j):
			z[i,j] = c
		elif(i == j):
			z[i,j] = c
	c = c + 1
c = 1
for j in range(N):
	for i in range(N):
		if (j < i):
			z[i,j] = c
	c = c + 1		
print(z)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 14:43:42) 
-- CODE:
from numpy import*
N = int(input("Matriz: "))
#matriz de zeros
z = zeros((N,N), dtype=int)
c = 1 
for i in range(N):
	for j in range(N):
		if (i < j):
			z[i,j] = c
		elif(i == j):
			z[i,j] = c
	c = c + 1
c = 1
for j in range(N):
	for i in range(N):
		if (j < i):
			z[i,j] = c
	c = c + 1		
print(z)	
-- EXECUTION TIME:
1.09386
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:05:07) 
-- CODE:
from numpy import*
N = int(input("Matriz: "))
#matriz de zeros
z = zeros((N,N), dtype=int)
c = 1 
for i in range(N):
	for j in range(N):
		if (i < j):
			z[i,j] = c
		elif(i == j):
			z[i,j] = c
	c = c + 1
c = 1
#for j in range(N):
	#for i in range(N):
		#if (j < i):
			#z[i,j] = c
	#c = c + 1		
print(z)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
